Rename to pyleague

--- a/web/logging.conf
+++ b/web/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,pyriot.accessor,pyriot.match
+keys=root,pyleague.accessor,pyleague.match
 
 [handlers]
 keys=consoleHandler
@@ -11,16 +11,16 @@ keys=simpleFormatter
 level=DEBUG
 handlers=consoleHandler
 
-[logger_pyriot.accessor]
+[logger_pyleague.accessor]
 level=INFO
 handlers=consoleHandler
-qualname=pyriot.accessor
+qualname=pyleague.accessor
 propagate=0
 
-[logger_pyriot.match]
+[logger_pyleague.match]
 level=INFO
 handlers=consoleHandler
-qualname=pyriot.match
+qualname=pyleague.match
 propagate=0
 
 [handler_consoleHandler]
