Gets team stats. More logging, error handling

--- a/pyleagueweb/pyleagueweb/logging.conf
+++ b/pyleagueweb/pyleagueweb/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,pyleague.accessor,pyleague.match
+keys=root,accessor,match,player,werkzeug
 
 [handlers]
 keys=consoleHandler
@@ -11,16 +11,28 @@ keys=simpleFormatter
 level=DEBUG
 handlers=consoleHandler
 
-[logger_pyleague.accessor]
+[logger_accessor]
 level=INFO
 handlers=consoleHandler
 qualname=pyleague.accessor
 propagate=0
 
-[logger_pyleague.match]
+[logger_match]
 level=INFO
 handlers=consoleHandler
 qualname=pyleague.match
+propagate=0
+
+[logger_player]
+level=WARNING
+handlers=consoleHandler
+qualname=pyleagueweb.player.player
+propagate=0
+
+[logger_werkzeug]
+level=INFO
+handlers=consoleHandler
+qualname=werkzeug
 propagate=0
 
 [handler_consoleHandler]
