--- a/pyleagueweb/pyleagueweb/logging.conf
+++ b/pyleagueweb/pyleagueweb/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,accessor,match,player,werkzeug
+keys=root,accessor,match,cache,werkzeug
 
 [handlers]
 keys=consoleHandler
@@ -23,10 +23,10 @@ handlers=consoleHandler
 qualname=pyleague.match
 propagate=0
 
-[logger_player]
+[logger_cache]
 level=WARNING
 handlers=consoleHandler
-qualname=pyleagueweb.player.player
+qualname=pyleagueweb.cache
 propagate=0
 
 [logger_werkzeug]
